# Nexmarine

./: Cargo.toml  README.md
docs/: compare.md  protocol.md  seabind.md
src/: config.rs  input.rs  lib.rs  main.rs  output.rs  protocol.rs  server.rs
src/dashboard/: mod.rs
src/dashboard/static/: app.js
src/dashboard/templates/: dashboard.html
src/tests/: mod.rs
