[package]
name = "nexmarine"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet Turgay AKALIN"]
description = "A blazing-fast, cross-platform marine data server"
license = "MIT"
repository = "https://github.com/makalin/Nexmarine"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
hyper = { version = "1.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-serial = "5.4"
tokio-tungstenite = "0.21"
nmea = "0.6"
anyhow = "1.0"
thiserror = "1.0"
config = "0.14"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
